examples/test/testpolicy4117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4117
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key48: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value10
          key14: value21
          key8: value2
      podSelector:
        matchLabels:
          key16: value45
